fix(walkme): the background of header overlaps now all the text

--- a/packages/manager/apps/public-cloud/src/components/walkMe/walkme.less
+++ b/packages/manager/apps/public-cloud/src/components/walkMe/walkme.less
@@ -26,19 +26,11 @@
 
   .walkme-title {
     .popover-title {
-      background-color: #fff;
+      background-color: @secondary-color;
       font-weight: @oui-font-semibold;
       color: @oui-color-brand;
       font-size: 1rem;
-    }
-
-    .walkme-bubble {
-      background-color: @secondary-color;
       border-radius: 12px;
-      top: 5px;
-      width: 15%;
-      z-index: -1;
-      height: 70%;
     }
   }
 
